--- a/index.html
+++ b/index.html
@@ -189,25 +189,23 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<h3>Mailing Address</h3>
+								<p>Centre for Astrophysics and Supercomputing<br />
+								Swinburne University of Technology<br />
+								John Street, Hawthorn<br />
+								Victoria, Australia</p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">nvanbemmel@swin.edu.au</a></p>
 							</section>
 							<section>
-								<h3>Social</h3>
+								<h3>Find me here:</h3>
 								<ul class="icons alt">
-									<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-lg --fa-li-margin:auto 50%; --fa-border"></a></li>
-									<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-lg --fa-li-margin:auto 50%; --fa-border"></a></li>
-									<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-lg --fa-li-margin:auto 50%; --fa-border"></a></li>
-									<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-lg --fa-li-margin:auto 50%; --fa-border"></a></li>
+									<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-xl --fa-li-margin:auto 50%; --fa-border"></a></li>
+									<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-xl --fa-li-margin:auto 50%; --fa-border"></a></li>
+									<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-xl --fa-li-margin:auto 50%; --fa-border"></a></li>
+									<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-xl --fa-li-margin:auto 50%; --fa-border"></a></li>
 								</ul>
 							</section>
 						</section>
