--- a/index.html
+++ b/index.html
@@ -197,15 +197,15 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">nvanbemmel@swin.edu.au</a></p>
+								<p><a href="mailto:nvanbemmel@swin.edu.au">nvanbemmel@swin.edu.au</a></p>
 							</section>
 							<section>
 								<h3>Find me here:</h3>
 								<ul class="icons alt">
-									<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-xl --fa-li-margin:auto 50%; --fa-border"></a></li>
-									<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-xl --fa-li-margin:auto 50%; --fa-border"></a></li>
-									<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-xl --fa-li-margin:auto 50%; --fa-border"></a></li>
-									<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-xl --fa-li-margin:auto 50%; --fa-border"></a></li>
+									<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-xl fa-li --fa-li-margin:auto 50%; fa-border"></a></li>
+									<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-xl fa-li --fa-li-margin:auto 50%; fa-border"></a></li>
+									<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-xl fa-li --fa-li-margin:auto 50%; fa-border"></a></li>
+									<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-xl fa-li --fa-li-margin:auto 50%; fa-border"></a></li>
 								</ul>
 							</section>
 						</section>
