--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 							<li><a href="extras.html">Extras</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-lg --fa-li-margin:auto 30%;"></a></li>
-							<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-lg --fa-li-margin:auto 30%;"></a></li>
-							<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-lg --fa-li-margin:auto 30%;"></a></li>
-							<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-lg --fa-li-margin:auto 30%;"></a></li>
+							<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-lg"></a></li>
+							<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-lg"></a></li>
+							<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-lg"></a></li>
+							<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-lg"></a></li>
 						</ul>
 					</nav>
 
@@ -200,12 +200,16 @@
 								<p><a href="mailto:nvanbemmel@swin.edu.au">nvanbemmel@swin.edu.au</a></p>
 							</section>
 							<section>
+								<h3>CV</h3>
+								<p><a href="files/CV_nvanbemmel.pdf">View PDF</a></p>
+							<section>
+							<section>
 								<h3>Find me here:</h3>
 								<ul class="icons alt">
-									<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-xl fa-li --fa-li-margin:auto 50%; fa-border"></a></li>
-									<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-xl fa-li --fa-li-margin:auto 50%; fa-border"></a></li>
-									<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-xl fa-li --fa-li-margin:auto 50%; fa-border"></a></li>
-									<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-xl fa-li --fa-li-margin:auto 50%; fa-border"></a></li>
+									<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-xl fa-border"></a></li>
+									<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-xl fa-border"></a></li>
+									<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-xl fa-border"></a></li>
+									<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-xl fa-border"></a></li>
 								</ul>
 							</section>
 						</section>
