--- a/index.html
+++ b/index.html
@@ -202,14 +202,14 @@
 							<section>
 								<h3>CV</h3>
 								<p><a href="files/CV_nvanbemmel.pdf">View PDF</a></p>
+							</section>
 							<section>
-							<section>
-								<h3>Find me here:</h3>
+								<h3>Find me here</h3>
 								<ul class="icons alt">
-									<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-xl fa-border"></a></li>
-									<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-xl fa-border"></a></li>
-									<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-xl fa-border"></a></li>
-									<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-xl fa-border"></a></li>
+									<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-xl"></a></li>
+									<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-xl"></a></li>
+									<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-xl"></a></li>
+									<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-xl"></a></li>
 								</ul>
 							</section>
 						</section>
