--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<h1>Natasha<br />
 						Van Bemmel</h1>
 						<p> PhD candidate at Swinburne University of Technology, Australia<br />
-						Welcome to my website!</p>
+						Welcome to my website! [CURRENTLY UNDER CONSTRUCTION]</p>
 						<!-- <p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
 						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p> -->
 						<ul class="actions">
@@ -204,7 +204,7 @@
 								<p><a href="files/CV_nvanbemmel.pdf">View PDF</a></p>
 							</section>
 							<section>
-								<h3>Find me here</h3>
+								<h3>Links</h3>
 								<ul class="icons alt">
 									<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-xl"></a></li>
 									<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-xl"></a></li>
