fixing footer and logos all pages

--- a/extras.html
+++ b/extras.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://kit.fontawesome.com/2c84087aab.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 
@@ -31,10 +32,10 @@
 							<li class="active"><a href="extras.html">Extras</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/natasha-vb" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-lg"></a></li>
+							<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-lg"></a></li>
+							<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-lg"></a></li>
+							<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-lg"></a></li>
 						</ul>
 					</nav>
 
