--- a/science.html
+++ b/science.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://kit.fontawesome.com/2c84087aab.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 
@@ -31,10 +32,10 @@
 							<li><a href="extras.html">Extras</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-lg"></a></li>
+							<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-lg"></a></li>
+							<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-lg"></a></li>
+							<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-lg"></a></li>
 						</ul>
 					</nav>
 
@@ -83,25 +84,27 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<h3>Mailing Address</h3>
+								<p>Centre for Astrophysics and Supercomputing<br />
+								Swinburne University of Technology<br />
+								John Street, Hawthorn<br />
+								Victoria, Australia</p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="mailto:nvanbemmel@swin.edu.au">nvanbemmel@swin.edu.au</a></p>
 							</section>
 							<section>
-								<h3>Social</h3>
+								<h3>CV</h3>
+								<p><a href="files/CV_nvanbemmel.pdf">View PDF</a></p>
+							</section>
+							<section>
+								<h3>Links</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-xl"></a></li>
+									<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-xl"></a></li>
+									<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-xl"></a></li>
+									<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-xl"></a></li>
 								</ul>
 							</section>
 						</section>
