--- a/index.html
+++ b/index.html
@@ -165,7 +165,16 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+
+							<h2>Blockquote</h2>
+							<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis.</blockquote>
+
+							<hr />
+
+							<p><ia href="https://open.spotify.com/playlist/41bZ1hJ0GUwWmS5Acsgiuw?si=02ed9b51ffa847ea" class="fa-brands fa-spotify"></i> Song recommendations</p>
+
+							
+							<!-- <form method="post" action="#">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -183,7 +192,7 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</form>
+							</form> -->
 						</section>
 						<section class="split contact">
 							<section class="alt">
