testing footer link

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
 
 							<hr />
 
-							<p><ia href="https://open.spotify.com/playlist/41bZ1hJ0GUwWmS5Acsgiuw?si=02ed9b51ffa847ea" class="fa-brands fa-spotify"></i> Song recommendations</p>
+							<i><a href="https://open.spotify.com/playlist/41bZ1hJ0GUwWmS5Acsgiuw?si=02ed9b51ffa847ea" class="fa-brands fa-spotify fa-xl"></a></i> 
+							<p>Song recommendations</p>
 
 							
 							<!-- <form method="post" action="#">
