editing footer quote

--- a/index.html
+++ b/index.html
@@ -166,8 +166,12 @@
 					<footer id="footer">
 						<section>
 
-							<h2>Blockquote</h2>
-							<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis.</blockquote>
+							<blockquote>Smooth seas don't make good sailors,<br />
+										jump ship and head for failure,<br />
+										find yourself a tragedy,<br />
+										slowly lose your sanity
+							</blockquote>
+							<p><i> - Neck Deep</i></p>
 
 							<hr />
 
