editing footer quote

--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
 										find yourself a tragedy,<br />
 										slowly lose your sanity
 							</blockquote>
-							<p><i> - Neck Deep</i></p>
+							<p><i>Smooth Seas Don't Make Good Sailors - Neck Deep</i></p>
 
 							<hr />
 
-							<p> </p><i><a href="https://open.spotify.com/playlist/41bZ1hJ0GUwWmS5Acsgiuw?si=02ed9b51ffa847ea" class="fa-brands fa-spotify fa-xl"></a></i> 
+							<p> </p><i><a href="https://open.spotify.com/playlist/0J098BznJoG6WoEohfGefz?si=e4ecef43f34b42b4" class="fa-brands fa-spotify fa-xl"></a></i> 
 							Song recommendations</p>
 
 							
