updating footnote accross all pages

--- a/extras.html
+++ b/extras.html
@@ -62,25 +62,17 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
+							<blockquote>Smooth seas don't make good sailors,<br />
+										jump ship and head for failure,<br />
+										find yourself a tragedy,<br />
+										slowly lose your sanity
+							</blockquote>
+							<p><i>Smooth Seas Don't Make Good Sailors - Neck Deep</i></p>
+
+							<hr />
+
+							<p> </p><i><a href="https://open.spotify.com/playlist/0J098BznJoG6WoEohfGefz?si=e4ecef43f34b42b4" class="fa-brands fa-spotify fa-xl"></a></i> 
+							Song recommendations</p>
 						</section>
 						<section class="split contact">
 							<section class="alt">
