editing ASA text

--- a/extras.html
+++ b/extras.html
@@ -62,9 +62,9 @@
 								<header>
 									<span class="date">3-7 July, 2023</span>
 									<h2>ASA Annual Science Meeting</h2>
-									<p>I attended the <a href="https://www.asa2023.org/"> 2023 Astronomical Society of Australia (ASA) Annual Science Meeting</a> hosted by Macquarie University and CSIRO.
+									<p>I attended the <a href="https://www.asa2023.org/" target="_blank"> 2023 Astronomical Society of Australia (ASA) Annual Science Meeting</a> hosted by Macquarie University and CSIRO.
 										During which I presented my work with KNTraP in a poster and a sparkler video, which you can find below. For these I was presented
-										awards for <i>Best Poster (3rd)</i> the <i>People's Choice Award</i> for my poster, and <i>Best Sparkler (2nd)</i>.
+										awards for <strong>Best Poster (3rd)</strong> the <strong>People's Choice Award</strong> for my poster, and <strong>Best Sparkler (2nd)</strong>.
 									</p>
 
 									<video width="800" height="450" controls>
