--- a/extras.html
+++ b/extras.html
@@ -32,10 +32,10 @@
 							<li class="active"><a href="extras.html">Extras</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-lg"></a></li>
-							<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-lg"></a></li>
-							<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-lg"></a></li>
-							<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-lg"></a></li>
+							<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" target="_blank" class="fa-brands fa-bluesky fa-lg"></a></li>
+							<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" target="_blank" class="fa-brands fa-linkedin fa-lg"></a></li>
+							<li><a href="https://orcid.org/0000-0002-2194-4567" target="_blank" class="fa-brands fa-orcid fa-lg"></a></li>
+							<li><a href="https://github.com/natasha-vb" target="_blank" class="fa-brands fa-github fa-lg"></a></li>
 						</ul>
 					</nav>
 
@@ -94,7 +94,7 @@
 
 							<hr />
 
-							<p> </p><i><a href="https://open.spotify.com/playlist/0J098BznJoG6WoEohfGefz?si=e4ecef43f34b42b4" class="fa-brands fa-spotify fa-xl"></a></i> 
+							<p> </p><i><a href="https://open.spotify.com/playlist/0J098BznJoG6WoEohfGefz?si=e4ecef43f34b42b4" target="_blank" class="fa-brands fa-spotify fa-xl"></a></i> 
 							Song recommendations</p>
 						</section>
 						<section class="split contact">
@@ -116,10 +116,10 @@
 							<section>
 								<h3>Links</h3>
 								<ul class="icons alt">
-									<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" style="text-decoration: none;" class="fa-brands fa-bluesky fa-xl"></a></li>
-									<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" class="fa-brands fa-linkedin fa-xl"></a></li>
-									<li><a href="https://orcid.org/0000-0002-2194-4567" class="fa-brands fa-orcid fa-xl"></a></li>
-									<li><a href="https://github.com/natasha-vb" class="fa-brands fa-github fa-xl"></a></li>
+									<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" target="_blank" class="fa-brands fa-bluesky fa-xl"></a></li>
+									<li><a href="https://www.linkedin.com/in/natasha-van-bemmel/" target="_blank" class="fa-brands fa-linkedin fa-xl"></a></li>
+									<li><a href="https://orcid.org/0000-0002-2194-4567" target="_blank" class="fa-brands fa-orcid fa-xl"></a></li>
+									<li><a href="https://github.com/natasha-vb" target="_blank" class="fa-brands fa-github fa-xl"></a></li>
 								</ul>
 							</section>
 						</section>
