changing extras to news, and adding MNRAS award

--- a/science.html
+++ b/science.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic Page - Massively by HTML5 UP</title>
+		<title>Natasha Van Bemmel</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,7 +29,7 @@
 							<li><a href="index.html">Introduction</a></li>
 							<li class="active"><a href="science.html">Science</a></li>
 							<li><a href="outreach.html">Outreach</a></li>
-							<li><a href="extras.html">Extras</a></li>
+							<li><a href="news.html">News</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" target="_blank" class="fa-brands fa-bluesky fa-lg"></a></li>
