--- a/outreach.html
+++ b/outreach.html
@@ -29,7 +29,7 @@
 							<li><a href="index.html">Introduction</a></li>
 							<li><a href="science.html">Science</a></li>
 							<li class="active"><a href="outreach.html">Outreach</a></li>
-							<li><a href="extras.html">Extras</a></li>
+							<li><a href="news.html">News</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://bsky.app/profile/natasha-vb.bsky.social" target="_blank" class="fa-brands fa-bluesky fa-lg"></a></li>
