--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<title>Natasha Van Bemmel</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/favicon.ico" />
+		<!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script src="https://kit.fontawesome.com/2c84087aab.js" crossorigin="anonymous"></script>
 	</head>
