--- a/news.html
+++ b/news.html
@@ -49,7 +49,9 @@
 									<h2>MNRAS Student Prize</h2>
 									<p><span class="image left"><img src="images/mnras_studentprize2025.jpg" alt="" /></span>At the Royal Astronomical Society National Astronomy Meeting held at Durham,
 										I was awarded the <a href="https://ras.ac.uk/news-and-press/news/mnras-student-prize-winners-2025" target="_blank">Monthly Notices of the Royal Astronomical Society (MNRAS) Student Author Prize</a>.
-										This prize was awarded for my first first-author paper, <a href="" target="_blank">An optically led search for kilonovae to z~.3 with the Kilonova and Transients Programme (KNTraP)</a>.</p>
+										This prize was awarded for my first first-author paper, <a href="" target="_blank">An optically led search for kilonovae to z~.3 with the Kilonova and Transients Programme (KNTraP)</a>. <br />
+										Winners are decided by the expert Editoria board who vote based on the quality of research, the clarity of the paper, and the impact of the results.
+									</p>
 								</header>
 
 							</section>
