adding read paper button

--- a/science.html
+++ b/science.html
@@ -46,11 +46,15 @@
 						<!-- Post -->
 							<h3>Publications</h3>
 									<dl>
-										<dt>An optically led search for kilonovae to z~0.3 with the Kilonova and Transients Programme (KNTraP)</dt>
+										<dt><i>An optically led search for kilonovae to z~0.3 with the Kilonova and Transients Programme (KNTraP)</i></dt>
 										<dd>
 											<p><strong>Natasha Van Bemmel</strong>, Jielai Zhang, Jeff Cooke, Armin Rest, Anais Möller, Igor Andreoni, Katie Auchettl, Dougal Dobie, Bruce Gendre, Simon Goode, James Freeburn, David O Jones, Charles D Kilpatrick, Amy Lien, Arne Rau, Lee Spitler, Mark Suhr, Fransisco Valdes</p>
 											<li><a href="https://doi.org/10.1093/mnras/staf332" class="button">View paper</a></li>
 										</dd>
+										<ul class="actions">
+											<li><a href="https://doi.org/10.1093/mnras/staf332" class="fa-solid fa-book-open">Read paper</a></li>
+										</ul>
+										
 										<dt>Item 2</dt>
 										<dd>
 											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
