adding more papers

--- a/science.html
+++ b/science.html
@@ -48,20 +48,28 @@
 									<dl>
 										<dt><i>An optically led search for kilonovae to z~0.3 with the Kilonova and Transients Programme (KNTraP)</i></dt>
 										<dd>
-											<p><strong>Natasha Van Bemmel</strong>, Jielai Zhang, Jeff Cooke, Armin Rest, Anais Möller, Igor Andreoni, Katie Auchettl, Dougal Dobie, Bruce Gendre, Simon Goode, James Freeburn, David O Jones, Charles D Kilpatrick, Amy Lien, Arne Rau, Lee Spitler, Mark Suhr, Fransisco Valdes</p>
+											<p style="font-size: smaller;"><strong>Natasha Van Bemmel</strong>, Jielai Zhang, Jeff Cooke, Armin Rest, Anais Möller, Igor Andreoni, Katie Auchettl, Dougal Dobie, Bruce Gendre, Simon Goode, James Freeburn, David O Jones, Charles D Kilpatrick, Amy Lien, Arne Rau, Lee Spitler, Mark Suhr, Fransisco Valdes</p>
 										</dd>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1093/mnras/staf332" target="_blank" class="button">View paper</a></li>
 										</ul>
 
-										<dt>Item 2</dt>
+										<dt><i>A follow-up strategy enabling discovery of electromagnetic counterparts to highly magnified gravitationally lensed gravitational waves</i></dt>
 										<dd>
-											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+											<p>Dan Ryczanowski, Jeff Cooke, James Freeburn, Benjamin Gompertz, Christopher Paul Haines, Matt Nicholl, Graham Smith, <strong>Natasha Van Bemmel</strong>, and Jielai Zhang†</p>
 										</dd>
-										<dt>Item 3</dt>
+										<ul class="actions">
+											<li><a href="https://doi.org/10.1098/rsta.2024.0118" target="_blank" class="button">View paper</a></li>
+										</ul>
+
+										<dt><i>GRB220831A: a hostless, intermediate gamma-ray burst with an unusual optical afterglow</i></dt>
 										<dd>
-											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+											<p>James Freeburn, Brendan O'Connor, Jeff Cooke, Dougal Dobie, Anais Möller, Nicolas Tejos, Jielai Zhang, Paz Beniamini, Katie Auchettl, James DeLaunay, Simone Dichiara, Wen-fai Fong, Simon Goode, Alexa Gordon, Charles D Kilpatrick, Amy Lien, Cassidy Mihalenko, Geoffrey Ryan, Karelle Siellez, Mark Suhr, Eleonora Troja, <strong>Natasha Van Bemmel</strong>, Sara Webb</p>
 										</dd>
+										<ul class="actions">
+											<li><a href="https:///doi.org/10.1093/mnras/staf147" target="_blank" class="button">View paper</a></li>
+										</ul>
+
 									</dl>
 
 					</div>
