adding more tdu pics

--- a/news.html
+++ b/news.html
@@ -72,6 +72,7 @@
 										</div>
 										<div class="col-6">
 											<img src="images/tdu_nametags.png" style="width: 100%">
+											<img src="images/tdu_banners.png" style="width: 100%">
 										</div>
 									 </div>
 
