adding intro page section

--- a/index.html
+++ b/index.html
@@ -52,10 +52,21 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main">
+				 <div id="main">
+					<p><span class="images"><img src="images/natasha_keck.jpg" alt="" /></span>Hello! My name is Natasha Van Bemmel 
+					and I am an PhD candidate at the <a href="https://www.swinburne.edu.au/research/centres-groups-clinics/centre-for-astrophysics-supercomputing/" target="_blank">Centre for Astrophysics and Supercomputing</a>, at Swinburne University of Technology. 
+					I am also an affiliate member of <a href="https://www.ozgrav.org/" target="_blank">OzGrav</a> the ARC Centre of Excellence for Gravtivational Wave Discovery.</p>
+
+					<p>My research... </p>
+
+
+				 </div>
+
+
+					<!-- <div id="main"> -->
 
 						<!-- Featured Post -->
-							<article class="post featured">
+							<!-- <article class="post featured">
 								<header class="major">
 									<span class="date">April 25, 2017</span>
 									<h2><a href="#">And this is a<br />
@@ -68,10 +79,10 @@
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
-							</article>
+							</article> -->
 
 						<!-- Posts -->
-							<section class="posts">
+							<!-- <section class="posts">
 								<article>
 									<header>
 										<span class="date">April 24, 2017</span>
@@ -144,7 +155,10 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-							</section>
+							</section> -->
+
+						
+						
 
 						<!-- Footer -->
 							<footer>
@@ -200,7 +214,7 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Mailing Address</h3>
+								<h3>Institute Address</h3>
 								<p>Centre for Astrophysics and Supercomputing<br />
 								Swinburne University of Technology<br />
 								John Street, Hawthorn<br />
