--- a/news.html
+++ b/news.html
@@ -132,7 +132,7 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Mailing Address</h3>
+								<h3>Institute Address</h3>
 								<p>Centre for Astrophysics and Supercomputing<br />
 								Swinburne University of Technology<br />
 								John Street, Hawthorn<br />
