--- a/outreach.html
+++ b/outreach.html
@@ -449,7 +449,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Mailing Address</h3>
+								<h3>Institute Address</h3>
 								<p>Centre for Astrophysics and Supercomputing<br />
 								Swinburne University of Technology<br />
 								John Street, Hawthorn<br />
