--- a/science.html
+++ b/science.html
@@ -50,9 +50,6 @@
 						<p>texttextext</p>
 
 					</section>
-
-
-
 				 </div>
 
 				<!-- Publications -->
@@ -114,7 +111,7 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Mailing Address</h3>
+								<h3>Institute Address</h3>
 								<p>Centre for Astrophysics and Supercomputing<br />
 								Swinburne University of Technology<br />
 								John Street, Hawthorn<br />
