changing image size

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 				<!-- Main -->
 				 <div id="main">
-					<p><span class="images"><img src="images/natasha_keck.jpg" alt="" /></span>Hello! My name is Natasha Van Bemmel 
+					<p><span class="image left"><img src="images/natasha_keck.jpg"/></span>Hello! My name is Natasha Van Bemmel 
 					and I am an PhD candidate at the <a href="https://www.swinburne.edu.au/research/centres-groups-clinics/centre-for-astrophysics-supercomputing/" target="_blank">Centre for Astrophysics and Supercomputing</a>, at Swinburne University of Technology. 
 					I am also an affiliate member of <a href="https://www.ozgrav.org/" target="_blank">OzGrav</a> the ARC Centre of Excellence for Gravtivational Wave Discovery.</p>
 
