adding outreach sections

--- a/news.html
+++ b/news.html
@@ -57,8 +57,6 @@
 										<br />
 										<br />
 										<br />
-										<br />
-										<br />
 								</header>
 							</section>
 
@@ -166,7 +164,8 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<p>Page last updated: July 2025</p>
+						<ul><li>&copy; 2025</li><li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
