adding outreach images

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<!-- Copyright -->
 					<div id="copyright">
 						<p>Page last updated: July 2025</p>
-						<ul><li>&copy; 2025</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; 2025</li><li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
