adding introduction text

--- a/news.html
+++ b/news.html
@@ -164,7 +164,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<p>Page last updated: July 2025</p>
+						<p style="text-align: center;">Page last updated: July 2025</p>
 						<ul><li>&copy; 2025</li><li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li></ul>
 					</div>
 
