--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					a member of <a href="https://rsyltc.org.au/">Royal South Yarra Lawn Tennis Club </a>, where in 2013 I was awarded the <a href="https://rsyltc.org.au/documents/10184/19308/Centrecourt_-_Spring_2013.pdf"> 
 					Ethel Le Neveu Trophy best female player of the year (and again in 2016) and the Junior Trophy. At Royal South Yarra, I also began coaching children and assisted in their school 
 					holiday programs. Having developed my coaching skills further, I joined <a href="https://tennisgen.wordpress.com/about/">TennisGen</a>, where I 
-					coached students from 4 years to 80 years old, and designed my own lession plans. </p>
+					coached students from 4 years to 80 years old, and designed my own lesson plans. </p>
 					 <br/>
 					<br/>
 								
