--- a/index.html
+++ b/index.html
@@ -77,15 +77,14 @@
 					Prior to life as an astronomer, I spent my days playing tennis. I first began playing at 5 years old and since then had developed to become 
 					a competitive tournament player, competing in the Australian National Junior Championships and Victorian State Junior Championships - and even 
 					winning the Victorian 16 & Under Grasscourt Championships in singles and doubles. Over my tennis career I won 42 tournament titles, with my
-					full result history documented <a href="https://tournaments.tennis.com.au/player-profile/83283E9A-A184-475D-B33C-4DDA0464EFFD">here</a>. I became 
-					a member of <a href="https://rsyltc.org.au/">Royal South Yarra Lawn Tennis Club </a>, where in 2013 I was awarded the <a href="https://rsyltc.org.au/documents/10184/19308/Centrecourt_-_Spring_2013.pdf"> 
-					Ethel Le Neveu Trophy best female player of the year (and again in 2016) and the Junior Trophy. At Royal South Yarra, I also began coaching children and assisted in their school 
-					holiday programs. Having developed my coaching skills further, I joined <a href="https://tennisgen.wordpress.com/about/">TennisGen</a>, where I 
+					full result history documented <a href="https://tournaments.tennis.com.au/player-profile/83283E9A-A184-475D-B33C-4DDA0464EFFD" target="_blank">here</a>. I became 
+					a member of <a href="https://rsyltc.org.au/" target="_blank">Royal South Yarra Lawn Tennis Club </a>, where in 2013 I was awarded the <a href="https://rsyltc.org.au/documents/10184/19308/Centrecourt_-_Spring_2013.pdf" target="_blank"> 
+					Ethel Le Neveu Trophy best female player of the year (and again in 2016) and the Junior Trophy</a>. At Royal South Yarra, I also began coaching children and assisted in their school 
+					holiday programs. Having developed my coaching skills further, I joined <a href="https://tennisgen.wordpress.com/about/" target="_blank">TennisGen</a>, where I 
 					coached students from 4 years to 80 years old, and designed my own lesson plans. </p>
 					 <br/>
 					<br/>
-								
-
+					<br/>			
 
 				 </div>
 
