--- a/outreach.html
+++ b/outreach.html
@@ -48,7 +48,7 @@
 							with others. I have assisted and ran <a href="https://outreach.ozgrav.org/portal2/programs/mg/">Mission Gravity</a> sessions
 							which teaches high schoolers about stellar evolution through the aid of an immersive virtual reality program. I've had the 
 							chance to interact and talk about space with people of all ages though public events such as Spooktacular Space, National 
-							Science Week events, and at Celebrating Women and Diversity in STEM event.</p>
+							Science Week events, and at the Celebrating Women and Diversity in STEM event.</p>
 
 						<h2>Rubin First Look Watch Party</h2>
 						<p><span class="image left"><img src="images/rubinwp_mc.jpg"alt="" /></span>
@@ -61,11 +61,13 @@
 						</p>
 						<!-- <p><span class="image right"><img src="images/rubinwp1.jpg" alt="" /></span>Lorem ipsum dolor</p> -->
 
-						<h2>Astro on Tap Melbourne</h2>
+						<h2>Astronomy on Tap Melbourne</h2>
 						<p><span class="image right"><img src="images/astroontap.jpg" alt="" /></span>
 							Astronomy on Tap is an event that is held in locations all around the world, which brings astronomical researchers together with the 
 							general public in a casual environment. We are currently working towards bringing Astronomy on Tap to Melbourne, Australia!</p>
-
+						<br />
+						<br />
+						<br />
 					</section>
 				 </div>
 
