--- a/news.html
+++ b/news.html
@@ -94,9 +94,9 @@
 									At the 2023 OzGrav Annual Retreat, I was awarded runner-up of the <a href="https://www.ozgrav.org/news/2023-ozgrav-achievement-awards/" target="_blank">Student Rising Star Award</a>.
 									The award celebrates students or postdocs which have shown exceptional promise and growth in their professional development within the research centre. 
 									</p>
-									<blockquote>Natasha is nominated for her significant achievements during her PhD, including awards, international collaborations, invited presentations,
+									<blockquote>"Natasha is nominated for her significant achievements during her PhD, including awards, international collaborations, invited presentations,
 												and successful telescope proposals. Her leadership in restarting the Journal Club, active engagement in outreach events, and 
-												contributions to teaching demonstrate her dedication and growth as a researcher, making her a deserving candidate for the award.
+												contributions to teaching demonstrate her dedication and growth as a researcher, making her a deserving candidate for the award."
 									</blockquote>
 								</header>
 							</section>
