--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<h1>Natasha<br />
 						Van Bemmel</h1>
 						<p> PhD candidate at Swinburne University of Technology, Australia<br />
-						Welcome to my website! [CURRENTLY UNDER CONSTRUCTION]</p>
+						Welcome to my website!</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
