--- a/news.html
+++ b/news.html
@@ -67,7 +67,7 @@
 									<span class="date">29 Jan - 2 Feb, 2024</span>
 									<h2>Transients Down Under</h2>
 									<p>The first <a href="https://transientsdownunder.github.io/" target="_blank">Transients Down Under</a> conference was held at 
-										Swimburne University of Technology in 2024. Alongside giving a contributed talk, I was part of the local organising committee, and
+										Swinburne University of Technology in 2024. Alongside giving a contributed talk, I was part of the local organising committee, and
 										designed the posters for this conference. With these posters we wanted to highlight Australia, Indigenous elements, as well as 
 										transient astronomy. See below for the materials I created!
 									 </p>
